重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -2,6 +2,13 @@
 
 <link href="{:ADDON_PUBLIC_PATH}/user/css/iconfont.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
 <style type="text/css">
+    .mui-table-view .mui-media, .mui-table-view .mui-media-body{
+        padding: .75rem .625rem;
+        position: relative;
+        overflow: hidden;
+        height: auto;
+    }
+
     .mui-table-view .mui-media-object {
         line-height: 5.4375rem;
         height: 5.4375rem;
@@ -48,6 +55,7 @@
         background-color: #e1e1e1;
         overflow: hidden;
         float: left;
+        
     }
 
     i {
