--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -2,7 +2,7 @@
 
 <link href="{:ADDON_PUBLIC_PATH}/user/css/iconfont.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
 <style type="text/css">
-    .mui-table-view .mui-media, .mui-table-view .mui-media-body{
+    .mui-table-view .mui-media{
         padding: .75rem .625rem;
         position: relative;
         overflow: hidden;
