--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -19,6 +19,14 @@
         margin: 0;
     }
 
+    .mui-table-view .mui-media-body{
+        padding: 0 .625rem;
+    }
+
+    .mui-table-view-cell{
+        left: 0.625rem;
+    }
+
     .oblique-tag.oblique-tag-presell {
         background: #2c9eff;
     }
