重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -23,7 +23,7 @@
         padding: 0 .625rem;
     }
 
-    .mui-table-view-cell{
+    .mui-table-view-cell:after{
         left: 0.625rem;
     }
 
