重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/Public/user/css/app.css
+++ b/Addons/Shop/View/default/Public/user/css/app.css
@@ -8,6 +8,10 @@ html{
 	font-family: san-serif, "Microsoft JhengHei", Arial;
 }
 
+body{
+	font-family: san-serif, "Microsoft JhengHei", Arial;
+}
+
 .mui-android header.mui-bar{
 	display: none;
 }
