重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -27,8 +27,24 @@
         left: 0.625rem;
     }
 
+    .mui-slider-indicator{
+        background: #0CE854;
+    }
+
+    .mui-bar{
+        background: #0CE854;
+    }
+
+    .mui-bar-tab .mui-tab-item{
+        color:#00375B;
+    }
+
+    .mui-bar-tab .mui-tab-item.mui-active{
+        color:#D90D0D;
+    }
+
     .oblique-tag.oblique-tag-presell {
-        background: #2c9eff;
+        background: #E23352;
     }
 
     .oblique-tag {
