重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -27,7 +27,7 @@
         left: 0.625rem;
     }
 
-    .mui-slider-indicator{
+    /*.mui-slider-indicator{
         background: #0CE854;
     }
 
@@ -41,7 +41,7 @@
 
     .mui-bar-tab .mui-tab-item.mui-active{
         color:#D90D0D;
-    }
+    }*/
 
     .oblique-tag.oblique-tag-presell {
         background: #E23352;
