重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -43,6 +43,14 @@
         color:#D90D0D;
     }*/
 
+    .mui-segmented-control.mui-segmented-control-inverted .mui-control-item{
+        color: #0CE854;
+    }
+
+    .mui-table-view{
+        background: transparent;
+    }
+
     .oblique-tag.oblique-tag-presell {
         background: #E23352;
     }
