--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -2,7 +2,7 @@
 
 <link href="{:ADDON_PUBLIC_PATH}/user/css/iconfont.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
 <style type="text/css">
-    .mui-table-view .mui-media{
+    .mui-table-view .mui-media {
         padding: .75rem .625rem;
         position: relative;
         overflow: hidden;
@@ -10,20 +10,18 @@
     }
 
     .mui-table-view .mui-media-object {
-        line-height: 5.4375rem;
-        height: 5.4375rem;
-        max-width: 3.75rem;
+        width: 100%;
     }
 
-    .mui-table-view .mui-media-object.mui-pull-left{
+    .mui-table-view .mui-media-object.mui-pull-left {
         margin: 0;
     }
 
-    .mui-table-view .mui-media-body{
+    .mui-table-view .mui-media-body {
         padding: 0 .625rem;
     }
 
-    .mui-table-view-cell:after{
+    .mui-table-view-cell:after {
         left: 0.625rem;
     }
 
@@ -43,11 +41,11 @@
         color:#D90D0D;
     }*/
 
-    .mui-segmented-control.mui-segmented-control-inverted .mui-control-item{
+    .mui-segmented-control.mui-segmented-control-inverted .mui-control-item {
         color: #0CE854;
     }
 
-    .mui-table-view{
+    .mui-table-view {
         background: transparent;
     }
 
@@ -134,29 +132,27 @@
                                 <volist name="goodsList" id="goods">
                                     <if condition="$goodsCategory.id eq 0">
                                         <li class="mui-table-view-cell mui-media">
-
-                                                <div class="goods-picture-wrapper mui-pull-left">
-                                                    <img class="mui-media-object"
-                                                         src="{$goods.cover|get_cover_url}"/>
-                                                    <i class="oblique-tag oblique-tag-presell">热卖</i>
-                                                </div>
-                                                <div class="mui-media-body">
-                                                    {$goods.title}
-                                                    <p class="mui-ellipsis">{$goods.content}</p>
-                                                </div>
-
+                                            <div class="goods-picture-wrapper">
+                                                <img class="mui-media-object"
+                                                     src="{$goods.cover|get_cover_url}"/>
+                                                <i class="oblique-tag oblique-tag-presell">热卖</i>
+                                            </div>
+                                            <div class="mui-media-body">
+                                                {$goods.title}
+                                                <p class="mui-ellipsis">{$goods.content}</p>
+                                            </div>
                                         </li>
                                         <elseif condition="$goods.category_id eq $goodsCategory['id']"/>
                                         <li class="mui-table-view-cell mui-media">
-                                                <div class="goods-picture-wrapper mui-pull-left">
-                                                    <img class="mui-media-object mui-pull-left"
-                                                         src="{$goods.cover|get_cover_url}"/>
-                                                    <i class="oblique-tag oblique-tag-presell">热卖</i>
-                                                </div>
-                                                <div class="mui-media-body">
-                                                    {$goods.title}
-                                                    <p class="mui-ellipsis">{$goods.content}</p>
-                                                </div>
+                                            <div class="goods-picture-wrapper mui-pull-left">
+                                                <img class="mui-media-object mui-pull-left"
+                                                     src="{$goods.cover|get_cover_url}"/>
+                                                <i class="oblique-tag oblique-tag-presell">热卖</i>
+                                            </div>
+                                            <div class="mui-media-body">
+                                                {$goods.title}
+                                                <p class="mui-ellipsis">{$goods.content}</p>
+                                            </div>
 
                                         </li>
                                     </if>
