重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -10,6 +10,7 @@
     }
 
     .mui-table-view .mui-media-object {
+        max-width: 100%;
         width: 100%;
     }
 
@@ -73,11 +74,8 @@
 
     .goods-picture-wrapper {
         position: relative;
-        width: 3.75rem;
-        height: 5.4375rem;
         background-color: #e1e1e1;
         overflow: hidden;
-
     }
 
     i {
