--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -12,6 +12,8 @@
     .mui-table-view .mui-media-object {
         max-width: 100%;
         width: 100%;
+        height: auto;
+        line-height: normal;
     }
 
     .mui-table-view .mui-media-object.mui-pull-left {
