重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -3,7 +3,7 @@
 <link href="{:ADDON_PUBLIC_PATH}/user/css/iconfont.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
 <style type="text/css">
     .mui-table-view .mui-media {
-        padding: .75rem .625rem;
+        padding: .75rem 1.25rem;
         position: relative;
         overflow: hidden;
         height: auto;
@@ -45,7 +45,7 @@
     }*/
 
     .mui-segmented-control.mui-segmented-control-inverted .mui-control-item {
-        color: #0CE854;
+        /*color: #0CE854;*/
     }
 
     .mui-table-view {
