--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -134,7 +134,7 @@
                                         <li class="mui-table-view-cell mui-media">
                                             <div class="goods-picture-wrapper">
                                                 <img class="mui-media-object"
-                                                     src="{$goods.cover|get_cover_url}"/>
+                                                     data-lazyload="{$goods.cover|get_cover_url}"/>
                                                 <i class="oblique-tag oblique-tag-presell">热卖</i>
                                             </div>
                                             <div class="mui-media-body">
@@ -144,9 +144,9 @@
                                         </li>
                                         <elseif condition="$goods.category_id eq $goodsCategory['id']"/>
                                         <li class="mui-table-view-cell mui-media">
-                                            <div class="goods-picture-wrapper mui-pull-left">
-                                                <img class="mui-media-object mui-pull-left"
-                                                     src="{$goods.cover|get_cover_url}"/>
+                                            <div class="goods-picture-wrapper">
+                                                <img class="mui-media-object"
+                                                     data-lazyload=="{$goods.cover|get_cover_url}"/>
                                                 <i class="oblique-tag oblique-tag-presell">热卖</i>
                                             </div>
                                             <div class="mui-media-body">
@@ -174,6 +174,8 @@
 </div>
 <include file="./Addons/Shop/View/default/User/_footer.html"/>
 <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.min.js?v={:SITE_VERSION}"></script>
+<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.lazyload.js?v={:SITE_VERSION}"></script>
+<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.lazyload.img.js?v={:SITE_VERSION}"></script>
 <!--<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.pullToRefresh.js?v={:SITE_VERSION}"></script>
 <script type="text/javascript"
         src="{:ADDON_PUBLIC_PATH}/user/js/mui.pullToRefresh.material.js?v={:SITE_VERSION}"></script>-->
