重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -190,6 +190,10 @@
             indicators: true, //是否显示滚动条
             deceleration: deceleration
         });
+
+        $(document).imageLazyload({
+            
+        });
         /*$.ready(function () {
          //循环初始化所有下拉刷新，上拉加载。
          $.each(document.querySelectorAll('.mui-slider-group .mui-scroll'),
