--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -131,7 +131,7 @@
                             <ul class="mui-table-view">
                                 <volist name="goodsList" id="goods">
                                     <if condition="$goodsCategory.id eq 0">
-                                        <li class="mui-table-view-cell mui-media" style="width: 50%">
+                                        <li class="mui-table-view-cell mui-media mui-pull-left" style="width: 50%">
                                             <div class="goods-picture-wrapper">
                                                 <img class="mui-media-object"
                                                      data-lazyload="{$goods.cover|get_cover_url}"/>
@@ -144,7 +144,7 @@
                                         </li>
                                         <elseif condition="$goods.category_id eq $goodsCategory['id']"/>
                                         <li class="mui-table-view-cell mui-media" style="width: 50%">
-                                            <div class="goods-picture-wrapper">
+                                            <div class="goods-picture-wrapper mui-pull-left">
                                                 <img class="mui-media-object"
                                                      data-lazyload="{$goods.cover|get_cover_url}"/>
                                                 <i class="oblique-tag oblique-tag-presell">热卖</i>
