--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -143,8 +143,8 @@
                                             </div>
                                         </li>
                                         <elseif condition="$goods.category_id eq $goodsCategory['id']"/>
-                                        <li class="mui-table-view-cell mui-media" style="width: 50%">
-                                            <div class="goods-picture-wrapper mui-pull-left">
+                                        <li class="mui-table-view-cell mui-media mui-pull-left" style="width: 50%">
+                                            <div class="goods-picture-wrapper">
                                                 <img class="mui-media-object"
                                                      data-lazyload="{$goods.cover|get_cover_url}"/>
                                                 <i class="oblique-tag oblique-tag-presell">热卖</i>
