--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -12,7 +12,7 @@
     .mui-table-view .mui-media-object {
         max-width: 100%;
         width: 100%;
-        height: auto;
+        height: 5rem;
         line-height: normal;
     }
 
