--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -143,7 +143,7 @@
                                             </div>
                                         </li>
                                         <elseif condition="$goods.category_id eq $goodsCategory['id']"/>
-                                        <li class="mui-table-view-cell mui-media mui-pull-left" style="width: 50%">
+                                        <!--<li class="mui-table-view-cell mui-media mui-pull-left" style="width: 50%">
                                             <div class="goods-picture-wrapper">
                                                 <img class="mui-media-object"
                                                      data-lazyload="{$goods.cover|get_cover_url}"/>
@@ -154,7 +154,7 @@
                                                 <p class="mui-ellipsis">{$goods.content}</p>
                                             </div>
 
-                                        </li>
+                                        </li>-->
                                     </if>
                                 </volist>
                             </ul>
