重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -192,7 +192,7 @@
         });
 
         $(document).imageLazyload({
-
+            placeholder:"http://imgcdn.xuxian.com/logo-3.jpg"
         });
         /*$.ready(function () {
          //循环初始化所有下拉刷新，上拉加载。
