--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -131,7 +131,7 @@
                             <ul class="mui-table-view">
                                 <volist name="goodsList" id="goods">
                                     <if condition="$goodsCategory.id eq 0">
-                                        <li class="mui-table-view-cell mui-media mui-pull-left" style="width: 50%">
+                                        <li class="mui-table-view-cell mui-media" style="width: 50%">
                                             <div class="goods-picture-wrapper">
                                                 <img class="mui-media-object"
                                                      data-lazyload="{$goods.cover|get_cover_url}"/>
@@ -143,7 +143,7 @@
                                             </div>
                                         </li>
                                         <elseif condition="$goods.category_id eq $goodsCategory['id']"/>
-                                        <!--<li class="mui-table-view-cell mui-media mui-pull-left" style="width: 50%">
+                                        <li class="mui-table-view-cell mui-media" style="width: 50%">
                                             <div class="goods-picture-wrapper">
                                                 <img class="mui-media-object"
                                                      data-lazyload="{$goods.cover|get_cover_url}"/>
@@ -154,7 +154,7 @@
                                                 <p class="mui-ellipsis">{$goods.content}</p>
                                             </div>
 
-                                        </li>-->
+                                        </li>
                                     </if>
                                 </volist>
                             </ul>
