--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -10,8 +10,8 @@
     }
 
     .mui-table-view .mui-media-object {
-        max-width: 100%;
-        width: 100%;
+        max-width: 60px;
+        width: 60px;
         height: 5rem;
         line-height: normal;
     }
