重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -17,6 +17,10 @@
         left: 0.625rem;
     }
 
+    .mui-segmented-control .mui-control-item.mui-active{
+        border-bottom: 0.125rem solid #e74c3c;
+    }
+
     /*.mui-slider-indicator{
         background: #0CE854;
     }
@@ -81,7 +85,6 @@
     }
 
     .header-title-text {
-        border-bottom: 0.125rem solid #e74c3c;
         padding: 0 0 0.375rem 0;
     }
 </style>
