重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -18,7 +18,8 @@
     }
 
     .mui-segmented-control .mui-control-item.mui-active{
-        border-bottom: 0.125rem solid #e74c3c;
+       color:#e74c3c;
+       font-weight: 300;
     }
 
     /*.mui-slider-indicator{
