重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -17,7 +17,7 @@
         left: 0.625rem;
     }
 
-    .mui-segmented-control .mui-control-item.mui-active{
+    .mui-segmented-control.mui-scroll-wrapper .mui-control-item.mui-active{
        color:#e74c3c;
        font-weight: 300;
     }
