重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -20,6 +20,7 @@
     .mui-segmented-control.mui-scroll-wrapper .mui-control-item.mui-active{
        color:#e74c3c;
        font-weight: 300;
+       border-bottom: .125rem solid #e74c3c;
     }
 
     /*.mui-slider-indicator{
@@ -109,7 +110,7 @@
         <div id="sliderSegmentedControl"
              class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
             <div class="mui-scroll" style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px); width: 100%">
-                <a class="mui-control-item" style="width: 50%" href="#itemJingPin"><span
+                <a class="mui-control-item mui-active" style="width: 50%" href="#itemJingPin"><span
                         class="header-title-text">精品折扣</span></a>
                 <a class="mui-control-item" style="width: 50%" href="#itemChangXiao"><span class="header-title-text">畅销分类</span></a>
             </div>
