--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -120,9 +120,9 @@
                 <div id="scrollJinPin" class="mui-scroll-wrapper">
                     <div class="mui-scroll"
                          style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px);">
-                        <ul class="mui-table-view mui-grid-view">
+                        <ul class="mui-table-view">
                             <volist name="goodsList" id="goods">
-                                <li class="mui-table-view-cell mui-media" style="width: 50%">
+                                <li class="mui-table-view-cell mui-media mui-pull-left">
                                     <div class="goods-picture-wrapper">
                                         <img class="mui-media-object"
                                              src="{$goods.cover|get_cover_url}"/>
