--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -122,9 +122,9 @@
                          style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px);">
                         <ul class="mui-table-view">
                             <volist name="goodsList" id="goods">
-                                <li class="mui-table-view-cell mui-media mui-pull-left">
+                                <li class="mui-table-view-cell mui-media">
                                     <div class="goods-picture-wrapper">
-                                        <img class="mui-media-object"
+                                        <img class="mui-media-object mui-pull-left"
                                              src="{$goods.cover|get_cover_url}"/>
                                         <i class="oblique-tag oblique-tag-presell">热卖</i>
                                     </div>
