--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -73,6 +73,8 @@
         position: relative;
         background-color: #e1e1e1;
         overflow: hidden;
+        width: 7.5rem;
+        height: 7.5rem;
     }
 
     i {
@@ -88,6 +90,12 @@
 
     .header-title-text {
         padding: 0 0 0.375rem 0;
+    }
+
+    .goods-title{
+        font-weight: 700;
+        padding: 0.375rem 0 0 0;
+        font-size:1rem;
     }
 </style>
 <body>
@@ -123,15 +131,17 @@
                         <ul class="mui-table-view">
                             <volist name="goodsList" id="goods">
                                 <li class="mui-table-view-cell mui-media">
-                                    <div class="goods-picture-wrapper">
-                                        <img class="mui-media-object mui-pull-left"
-                                             src="{$goods.cover|get_cover_url}"/>
-                                        <i class="oblique-tag oblique-tag-presell">热卖</i>
-                                    </div>
-                                    <div class="mui-media-body">
-                                        {$goods.title}
-                                        <p class="mui-ellipsis">{$goods.content}</p>
-                                    </div>
+                                    <dl>
+                                        <dt class="goods-picture-wrapper mui-pull-left">
+                                            <img class="mui-media-object" style="width: 100%; max-width: 100%"
+                                                 src="{$goods.cover|get_cover_url}"/>
+                                            <i class="oblique-tag oblique-tag-presell">热卖</i>
+                                        </dt>
+                                        <dd class="mui-media-body">
+                                            <div class="goods-title">{$goods.title}</div>
+                                            <p class="mui-ellipsis">{$goods.content}</p>
+                                        </dd>
+                                    </dl>
                                 </li>
 
                             </volist>
