重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -11,6 +11,8 @@
 
     .mui-table-view .mui-media-body {
         padding: 0 .625rem;
+        height: auto;
+        line-height: normal;
     }
 
     .mui-table-view-cell:after {
