重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -9,10 +9,13 @@
         height: auto;
     }
 
-    .mui-table-view .mui-media-body {
-        padding: 0 .625rem;
+    .mui-table-view .mui-media-object{
         height: auto;
         line-height: normal;
+    }
+
+    .mui-table-view .mui-media-body {
+        padding: 0 .625rem;
     }
 
     .mui-table-view-cell:after {
