--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -24,7 +24,7 @@
 
     .mui-segmented-control.mui-scroll-wrapper .mui-control-item.mui-active{
        color:#e74c3c;
-       font-weight: 300;
+       font-weight: 700;
        border-bottom: .125rem solid #e74c3c;
     }
 
@@ -49,7 +49,7 @@
     }
 
     .mui-table-view {
-        background: transparent;
+        /*background: transparent;*/
     }
 
     .oblique-tag.oblique-tag-presell {
@@ -102,7 +102,7 @@
     }
 </style>
 <body>
-<nav class="mui-bar mui-bar-tab">
+<nav class="mui-bar mui-bar-tab" style="display: block; -webkit-transform-origin: 0px 0px; opacity: 1; -webkit-transform: scale(1, 1); background-color: rgba(0,0,0,.68)">
     <a class="mui-tab-item mui-active" href="#">
         <span class="mui-icon mui-icon-home"></span>
         <span class="mui-tab-label">果园</span>
