重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -113,10 +113,10 @@
         display: none;
         position: fixed;
         bottom: 0;
-        height: 2.5rem;
+        height: 3rem;
         width: 100%;
         left: 0;
-        padding: 0.3125rem 0;
+        padding: 0 0;
         background-color: rgba(0,0,0,.68);
         z-index: 999;
         box-sizing: border-box;
@@ -127,7 +127,8 @@
 
     .footer .tab-item{
         width: 32.6%;
-        line-height: 2.5rem;
+        height: 3rem;
+        line-height: 3rem;
         text-align: center;
         display: inline-block;
     }
