重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -20,6 +20,7 @@
 
     .mui-table-view-cell:after {
         left: 0.625rem;
+        background: transparent;
     }
 
     .mui-segmented-control.mui-scroll-wrapper .mui-control-item.mui-active{
