--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -78,7 +78,8 @@
     .goods-picture-wrapper {
         position: relative;
         overflow: hidden;
-        width: 7.5rem;
+        width: 5.625rem;
+        height: 7.5rem;
     }
 
     i {
@@ -106,7 +107,7 @@
         width: 100%;
         padding: 0;
         margin: 0;
-        max-height: 3rem;
+        max-height: 7.5rem;
     }
 
     .banner-picture img{
