--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -107,7 +107,7 @@
         width: 100%;
         padding: 0;
         margin: 0;
-        max-height: 7.5rem;
+        overflow: hidden;
     }
 
     .banner-picture img{
