重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -10,8 +10,8 @@
     }
 
     .mui-table-view .mui-media-object {
-        height: auto;
-        line-height: normal;
+        height: 7.5rem;
+        line-height: 7.5rem;
     }
 
     .mui-table-view .mui-media-body {
