重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -116,7 +116,7 @@
     }
 </style>
 <body>
-<nav class="mui-bar mui-bar-tab">
+<!--<nav class="mui-bar mui-bar-tab">
     <a class="mui-tab-item mui-active" href="#">
         <span class="mui-icon mui-icon-home"></span>
         <span class="mui-tab-label">果园</span>
@@ -129,7 +129,7 @@
         <span class="mui-icon iconfont icon-jiesuanfangshi"></span>
         <span class="mui-tab-label">结算</span>
     </a>
-</nav>
+</nav>-->
 <div class="mui-content">
     <div id="slider" class="mui-slider mui-fullscreen">
         <div id="sliderSegmentedControl"
@@ -145,11 +145,11 @@
                 <div id="scrollJinPin" class="mui-scroll-wrapper">
                     <div class="mui-scroll"
                          style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px);">
-                        <div class="banner-picture">
+                        <!--<div class="banner-picture">
                             <volist name="slideShowList" id="slide">
                                 <img src="{$slide.img|get_cover_url}">
                             </volist>
-                        </div>
+                        </div>-->
                         <ul class="mui-table-view">
                             <volist name="goodsList" id="goods">
                                 <li class="mui-table-view-cell mui-media">
