重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -9,11 +9,6 @@
         height: auto;
     }
 
-    .mui-table-view .mui-media-object {
-        height: 7.5rem;
-        line-height: 7.5rem;
-    }
-
     .mui-table-view .mui-media-body {
         padding: 0 .625rem;
     }
@@ -79,7 +74,12 @@
         position: relative;
         overflow: hidden;
         width: 5.625rem;
-        height: 7.5rem;
+        height: 5.625rem;
+    }
+
+    .mui-table-view .mui-media-object {
+        height: 5.625rem;
+        line-height: 5.625rem;
     }
 
     i {
@@ -162,6 +162,9 @@
                                         <dd class="mui-media-body">
                                             <div class="goods-title">{$goods.title}</div>
                                             <p class="mui-ellipsis">{$goods.content}</p>
+                                        </dd>
+                                        <dd class="mui-media-body">
+
                                         </dd>
                                     </dl>
                                 </li>
