--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -101,6 +101,7 @@
         font-weight: 700;
         padding: 0.375rem 0 0 0;
         font-size: 1rem;
+        color: #5a5959;
     }
 
     .banner-picture{
