--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -7,6 +7,8 @@
         position: relative;
         overflow: hidden;
         height: auto;
+        background: #f3f4f9;
+        margin: 0.25rem 0 0 0;
     }
 
     .mui-table-view .mui-media-body {
@@ -45,7 +47,7 @@
     }
 
     .mui-table-view {
-        /*background: transparent;*/
+        background: #e6e7ec;
     }
 
     .oblique-tag.oblique-tag-presell {
