重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -169,8 +169,8 @@
                                             <div class="goods-title">{$goods.title}</div>
                                             <p class="mui-ellipsis">{$goods.content}</p>
                                         </dd>
-                                        <dd class="mui-media-body">
-
+                                        <dd class="mui-media-body mui-pull-right">
+                                            放入果盘
                                         </dd>
                                     </dl>
                                 </li>
