--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -109,17 +109,33 @@
         border-bottom: 0.1rem solid #e1e3ea;
     }
 
-    .banner-picture{
+    .banner-picture {
         width: 100%;
         padding: 0;
         margin: 0;
         overflow: hidden;
     }
 
-    .banner-picture img{
+    .banner-picture img {
         width: 100%;
         height: 9rem;
     }
+
+    .goods-price{
+        color: #333;
+        font-size: 1rem;
+        line-height: 1rem;
+        font-weight: 700;
+    }
+
+    .old-price{
+        color: #999;
+        font-size: 0.875rem;
+        line-height: 1rem;
+        margin-left: 0.375rem;
+        text-decoration: line-through;
+    }
+
 </style>
 <body>
 <!--<nav class="mui-bar mui-bar-tab">
@@ -171,6 +187,10 @@
                                         <dd class="mui-media-body">
                                             <div class="goods-title">{$goods.title}</div>
                                             <p class="mui-ellipsis">{$goods.content}</p>
+
+                                            <div class="goods-price">
+                                                <strong class="price">¥{$goods.price|wp_money_format}</strong><span class="old-price">¥{$goods.old_price|wp_money_format}</span>
+                                            </div>
                                         </dd>
                                     </dl>
                                 </li>
