--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -124,7 +124,7 @@
     .goods-price{
         color: #333;
         font-size: 1rem;
-        line-height: 1rem;
+        line-height: 2.5rem;
         font-weight: 700;
     }
 
@@ -186,8 +186,7 @@
                                         </dd>
                                         <dd class="mui-media-body">
                                             <div class="goods-title">{$goods.title}</div>
-                                            <p class="mui-ellipsis">{$goods.content}</p>
-
+                                            <p class="mui-ellipsis" style="line-height: 2.5rem">{$goods.content}</p>
                                             <div class="goods-price">
                                                 <strong class="price">¥{$goods.price|wp_money_format}</strong><span class="old-price">¥{$goods.old_price|wp_money_format}</span>
                                             </div>
